# logging-mp

./: .gitignore  LICENSE  README.md  README_zh-CN.md  pyproject.toml  test_log_tool_mp.py  test_log_tool_mt.py
example/: example.py
example/module_a/: worker_ta.py
example/module_a/module_b/: worker_tb.py
example/module_c/: worker_tc.py
module_a/: worker_a.py  worker_pa.py  worker_ta.py
module_a/module_b/: worker_b.py  worker_pb.py  worker_tb.py
module_c/: processor_c.py  processor_pc.py  processor_tc.py
src/logging_mp/: __init__.py
utils/: log_tool_mp.py  log_tool_mt.py  logging_mp.py  math_tool.py
utils/logging_mp/: README.md  pyproject.toml
utils/logging_mp/logging_mp/: __init__.py
