[project]
name = "logging-mp"
version = "0.2.0"
description = "A multiprocessing-safe logging system with Rich support."
authors = [
    { name = "silencht", email = "silencht@qq.com" }
]
license = { text = "MIT" }
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "rich>=13.0"
]

[project.urls]
Homepage = "https://github.com/silencht/logging-mp"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
