[project]
name = "logging-mp"
version = "0.1.5"
description = "A multiprocessing-safe logging system with Rich support."
readme = "README.md"
license = { text = "MIT" }
authors = [{name = "silencht", email = "silencht@qq.com"}]
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0"
]

[project.urls]
Homepage = "https://github.com/silencht/logging-mp"
